--- a/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
+++ b/ChronoKeep/UI/Timing/TimingRawReadsPage.xaml
@@ -93,6 +93,8 @@
         <DockPanel LastChildFill="False" Grid.Row="1" VerticalAlignment="Center" HorizontalAlignment="Center">
             <Button Name="DeleteButton" Content="Delete" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DeleteButton_Click"/>
             <Button Name="IgnoreButton" Content="Ignore" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="IgnoreButton_Click"/>
+            <Button Name="ChangeDNS" Content="Set DNS" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="ChangeDNS_Click"/>
+            <Button Name="ChangeDNF" Content="Set DNF" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="ChangeDNF_Click"/>
             <Button Name="Shift" Content="Edit" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="Shift_Click" />
             <Button Name="DoneButton" Content="Done" Height="35" FontSize="16" Width="120" Margin="5,5,5,5" Click="DoneButton_Click"/>
         </DockPanel>
