--- a/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
+++ b/ChronoKeep/UI/UHF RFID Reader/ChipPersonWindow.xaml
@@ -53,7 +53,7 @@
                 >
                 <TextBlock FontSize="20" Name="Bib" HorizontalAlignment="Center" />
                 <TextBlock FontSize="20" Name="Chip" HorizontalAlignment="Center" />
-                <TextBlock FontSize="60" Name="Name" HorizontalAlignment="Center" />
+                <TextBlock FontSize="60" Name="PersonName" HorizontalAlignment="Center" />
                 <TextBlock FontSize="60" Name="AgeGender" HorizontalAlignment="Center" />
                 <TextBlock FontSize="60" Name="Distance" HorizontalAlignment="Center" />
                 <TextBlock FontSize="20" Text="" HorizontalAlignment="Center" />
