Added some more constants for the PortalReader class. Updated the ChronokeepSettings window so that it closes if the main window closes. Changed a bunch of button icons to smaller versions because they look crisper. Changed a bunch of Labels to TextBlock because Labels look horrible with our UI framework. Added readers to the ChronokeepSettings window.

--- a/ChronoKeep/UI/Timing/AlarmsPage.xaml
+++ b/ChronoKeep/UI/Timing/AlarmsPage.xaml
@@ -22,10 +22,10 @@
                 <ColumnDefinition Width="55" />
                 <ColumnDefinition Width="45" />
             </Grid.ColumnDefinitions>
-            <Label Content="Bib" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="0" />
-            <Label Content="Chip" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="1" />
-            <Label Content="Sound" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="2" />
-            <Label Content="Active" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="3" />
+            <TextBlock Text="Bib" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="0" />
+            <TextBlock Text="Chip" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="1" />
+            <TextBlock Text="Sound" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="2" />
+            <TextBlock Text="Active" Margin="5,5,5,0" HorizontalAlignment="Center" Grid.Column="3" />
         </Grid>
         <ListBox
             Name="AlarmsBox"
