--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -34,15 +34,15 @@
             VerticalAlignment="Center"
             >
             <StackPanel x:Name="loadingPanel" HorizontalAlignment="Center" VerticalAlignment="Center" Margin="20,0,20,0">
-                <Label Content="Loading..." FontSize="36" Margin="5,5,5,5"/>
+                <TextBlock Text="Loading..." FontSize="36" Margin="5,5,5,5"/>
                 <ui:ProgressRing IsIndeterminate="True" Margin="5,5,5,5"/>
             </StackPanel>
             <StackPanel x:Name="settingsPanel" Visibility="Collapsed" Margin="0,10,0,0">
                 <StackPanel Orientation="Horizontal">
-                    <Label
-                        Content="Name"
-                        HorizontalContentAlignment="Right"
-                        VerticalContentAlignment="Center"
+                    <TextBlock
+                        Text="Name"
+                        TextAlignment="Right"
+                        VerticalAlignment="Center"
                         Width="120"
                         Margin="5,5,5,5"
                         />
@@ -53,10 +53,10 @@
                         />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Label
-                        Content="Sighting Period"
-                        HorizontalContentAlignment="Right"
-                        VerticalContentAlignment="Center"
+                    <TextBlock
+                        Text="Sighting Period"
+                        TextAlignment="Right"
+                        VerticalAlignment="Center"
                         Width="120"
                         Margin="5,5,5,5"
                         />
@@ -67,10 +67,10 @@
                         />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Label
-                        Content="Read Window"
-                        HorizontalContentAlignment="Right"
-                        VerticalContentAlignment="Center"
+                    <TextBlock
+                        Text="Read Window"
+                        TextAlignment="Right"
+                        VerticalAlignment="Center"
                         Width="120"
                         Margin="5,5,5,5"
                         />
@@ -81,10 +81,10 @@
                         />
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Label
-                        Content="Chip Type"
-                        HorizontalContentAlignment="Right"
-                        VerticalContentAlignment="Center"
+                    <TextBlock
+                        Text="Chip Type"
+                        TextAlignment="Right"
+                        VerticalAlignment="Center"
                         Width="120"
                         Margin="5,5,5,5"
                         />
@@ -105,10 +105,10 @@
                     </ComboBox>
                 </StackPanel>
                 <StackPanel Orientation="Horizontal">
-                    <Label
-                        Content="Volume"
-                        HorizontalContentAlignment="Right"
-                        VerticalContentAlignment="Center"
+                    <TextBlock
+                        Text="Volume"
+                        TextAlignment="Right"
+                        VerticalAlignment="Center"
                         Width="120"
                         Margin="5,5,5,5"
                         />
@@ -130,6 +130,31 @@
                         Margin="5,5,5,5"
                         />
                 </StackPanel>
+                <Expander
+                    x:Name="readerExpander"
+                    MaxHeight="200"
+                    Margin="5,5,5,5"
+                    HorizontalAlignment="Stretch"
+                    IsExpanded="False"
+                    ExpandDirection="Down"
+                    Expanded="Expander_Expanded"
+                    Collapsed="Expander_Expanded"
+                    >
+                    <Expander.Header>
+                        <DockPanel LastChildFill="False" VerticalAlignment="Center">
+                            <TextBlock Text="Readers" Margin="5,0,0,0" VerticalAlignment="Center" />
+                            <ui:Button x:Name="addReaderButton" Icon="Add20" DockPanel.Dock="Right" Margin="0,0,10,0" VerticalAlignment="Center" Click="addReaderButton_Click" Visibility="Collapsed" />
+                        </DockPanel>
+                    </Expander.Header>
+                    <ListBox
+                        x:Name="readerListView"
+                        Height="200"
+                        HorizontalAlignment="Center"
+                        ScrollViewer.CanContentScroll="True"
+                        ScrollViewer.VerticalScrollBarVisibility="Auto"
+                        Margin="0,-10,0,0"
+                        />
+                </Expander>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button
                         Content="Upload Participants"
