Finished adding api control to Chronokeep Settings.

--- a/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/ChronokeepSettings.xaml
@@ -202,6 +202,24 @@
                 </StackPanel>
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                     <Button
+                        Content="Manual Results Upload"
+                        x:Name="manualResultsButton"
+                        Click="manualResultsButton_Click"
+                        Width="185"
+                        Height="35"
+                        Margin="5,5,5,5"
+                        />
+                    <ui:ToggleSwitch
+                        Content="Auto Upload Results"
+                        x:Name="autoResultsSwitch"
+                        Click="autoResultsSwitch_Checked"
+                        Width="180"
+                        Height="35"
+                        Margin="10,5,5,5"
+                        />
+                </StackPanel>
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                    <Button
                         Content="Stop Server"
                         x:Name="stopServerButton"
                         Click="stopServerButton_Click"
