--- a/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
+++ b/ChronoKeep/UI/Timing/ReaderSettings/RFIDSettings.xaml
@@ -12,6 +12,7 @@
         WindowBackdropType="Mica"
         WindowCornerPreference="Round"
         WindowStartupLocation="CenterScreen"
+        Closed="UiWindow_Closed"
         Height="500"
         Width="300"
         ResizeMode="NoResize"
@@ -30,12 +31,15 @@
             Margin="20,10,20,20"
             VerticalAlignment="Center"
             >
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
                     Text="Ultra ID"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <Slider
@@ -47,6 +51,7 @@
                     Minimum="1"
                     TickFrequency="1"
                     ValueChanged="idSlider_ValueChanged"
+                    VerticalAlignment="Center"
                     />
                 <TextBlock
                     x:Name="idDisplay"
@@ -57,47 +62,58 @@
                     Margin="5,5,5,5"
                     />
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
                     Text="Chip Type"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <ComboBox
                     x:Name="chipBox"
                     Width="250"
                     Margin="5,5,5,5"
+                    VerticalAlignment="Center"
                     >
                     <ComboBoxItem Content="Decimal" IsSelected="True" />
                     <ComboBoxItem Content="Hexadecimal" />
                 </ComboBox>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
                     Text="Gating Mode"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <ComboBox
                     x:Name="gatingModeBox"
                     Width="250"
                     Margin="5,5,5,5"
+                    VerticalAlignment="Center"
                     >
                     <ComboBoxItem Content ="Per Reader" IsSelected="True"/>
                     <ComboBoxItem Content ="Per Box" />
                     <ComboBoxItem Content ="First Time Seen"/>
                 </ComboBox>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
-                    Text="Gating Period"
+                    Text="Gating Interval"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <Slider
@@ -109,6 +125,7 @@
                     Minimum="0"
                     TickFrequency="1"
                     ValueChanged="gatingSlider_ValueChanged"
+                    VerticalAlignment="Center"
                     />
                 <TextBlock
                     x:Name="gatingDisplay"
@@ -119,64 +136,58 @@
                     Margin="5,5,5,5"
                     />
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
                     Text="When to Beep"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <ComboBox
                     x:Name="whenBeepBox"
                     Width="250"
                     Margin="5,5,5,5"
+                    VerticalAlignment="Center"
                     >
                     <ComboBoxItem Content="Always" IsSelected="True" />
                     <ComboBoxItem Content="Only First Seen" />
                 </ComboBox>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
                     Text="Beeper Volume"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <ComboBox
                     x:Name="volumeBox"
                     Width="250"
                     Margin="5,5,5,5"
+                    VerticalAlignment="Center"
                     >
                     <ComboBoxItem Content="Off" IsSelected="True" />
                     <ComboBoxItem Content="Soft" />
                     <ComboBoxItem Content="Loud" />
                 </ComboBox>
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
-                <TextBlock
-                    Text="Set Time From GPS"
-                    TextAlignment="Right"
-                    VerticalAlignment="Center"
-                    Width="120"
-                    Margin="5,5,5,5"
-                    />
-                <ComboBox
-                    x:Name="timeGPSBox"
-                    Width="250"
-                    Margin="5,5,5,5"
-                    >
-                    <ComboBoxItem Content="Don't Set" IsSelected="True" />
-                    <ComboBoxItem Content="Set" />
-                </ComboBox>
-            </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                >
                 <TextBlock
                     Text="Time Zone"
                     TextAlignment="Right"
                     VerticalAlignment="Center"
-                    Width="120"
+                    Width="100"
                     Margin="5,5,5,5"
                     />
                 <Slider
@@ -188,6 +199,7 @@
                     Minimum="-23"
                     TickFrequency="1"
                     ValueChanged="timeZoneSlider_ValueChanged"
+                    VerticalAlignment="Center"
                     />
                 <TextBlock
                     x:Name="timeZoneDisplay"
@@ -198,21 +210,45 @@
                     Margin="5,5,5,5"
                     />
             </StackPanel>
-            <StackPanel Orientation="Horizontal">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                >
                 <ui:ToggleSwitch
-                    x:Name="startReadingSwitch"
-                    Content="Start Reading"
+                    x:Name="setGPSSwitch"
+                    Content="Set Time From GPS?"
                     Margin="5,5,5,5"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center"
                     />
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                >
+                <ui:ToggleSwitch
+                    x:Name="readingSwitch"
+                    Content="Reading?"
+                    Margin="5,5,5,5"
+                    VerticalAlignment="Center"
+                    HorizontalAlignment="Center"
+                    Click="readingSwitch_Click"
+                    />
+            </StackPanel>
+            <StackPanel
+                Orientation="Horizontal"
+                Height="45"
+                HorizontalAlignment="Center"
+                >
                 <Button
                         Content="Save Settings"
                         x:Name="saveSettingsButton"
                         Click="saveSettingsButton_Click"
-                        Width="185"
+                        Width="165"
                         Height="35"
                         Margin="5,5,5,5"
                         />
@@ -220,7 +256,7 @@
                         Content="Close"
                         x:Name="closeButton"
                         Click="closeButton_Click"
-                        Width="185"
+                        Width="165"
                         Height="35"
                         Margin="5,5,5,5"
                         />
